src/objects/Oblix_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings related to Oblix Project</description>
    <fields>
        <fullName>Attribute_1__c</fullName>
        <description>Additional attribute can be used by some custom settings</description>
        <label>Attribute 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>This field is optional for custom settings which do not require matching by picklist items. For custom settings SCORE_* this field is used to search by and therefore should match the picklist value of the required field.</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Setting value for the given name</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Oblix Settings</label>
</CustomObject>